# picrust

./: .gitignore  Cargo.toml  README.md  build_and_copy.sh  config.txt  link.x  link32.x  link64.x  link_common.x
.cargo/: config.toml
kernel/: Cargo.toml  build_and_copy.sh  link64.x
kernel/.cargo/: config.toml
kernel/img/: cmdline.txt  config.txt
kernel/src/: exception.rs  main.rs  monitor.rs  system.rs  tests.rs
kernel/src/system/: arm_core.rs  hal.rs  output.rs  peripherals.rs  screen.rs
kernel/src/system/arm_core/: counter.rs  features.rs  mmu.rs
kernel/src/system/arm_core/mmu/: descriptors.rs
kernel/src/system/arm_core/registers/: aarch64.rs
kernel/src/system/arm_core/registers/aarch64/: general_sys_ctrl.rs  generic_timer.rs  special_purpose.rs
kernel/src/system/arm_core/registers/aarch64/general_sys_ctrl/: cpacr_el1.rs  cpuectlr_el1.rs  hcr_el2.rs  id_aa64mmfr0_el1.rs  mair_el1.rs  mpidr_el1.rs  rmr_elx.rs  scr_el3.rs  sctlr_el1.rs  tcr_el1.rs  tpidr_elx.rs  vbar_elx.rs
kernel/src/system/arm_core/registers/aarch64/generic_timer/: cntfrq_el0.rs  cnthctl_el2.rs  cntp_ctl_el0.rs  cntp_cval_el0.rs  cntp_tval_el0.rs  cntpct_el0.rs  cntvoff_el2.rs
kernel/src/system/arm_core/registers/aarch64/special_purpose/: elr_elx.rs  sp_elx.rs  spsel.rs  spsr_el2.rs  spsr_el3.rs
kernel/src/system/hal/: clocks.rs  console.rs  counter.rs  display.rs  framebuffer.rs  info.rs  led.rs  signal.rs  thread.rs
kernel/src/system/hal/display/: edid.rs
kernel/src/system/peripherals/: dma.rs  gpio.rs  interrupts.rs  mailbox.rs  mmio.rs  power.rs  system_timer.rs  uart.rs  usb.rs
monitor/: Cargo.toml
monitor/src/: command.rs  lib.rs  token.rs  utils.rs  writer.rs
monitor/src/utils/: format.rs
mystd/: Cargo.toml
mystd/src/: bcd.rs  bitfield.rs  bitfield2.rs  buffer.rs  byte_value.rs  collections.rs  drawing.rs  fixed_point.rs  format.rs  fractions.rs  io.rs  lib.rs  morse.rs  mutex.rs  parse.rs  slice.rs  sync.rs
mystd/src/collections/: bunch.rs  line.rs  rectangular.rs  ring.rs  (+1 more)
src/: bitfield.rs  buffer.rs  drawing.rs  exception.rs  framebuffer.rs  hal.rs  main.rs  monitor.rs  peripherals.rs  system.rs
src/hal/: display.rs  framebuffer.rs  info.rs  led.rs
src/monitor/: format.rs  parse.rs
src/peripherals/: gpio.rs  mailbox.rs  mmio.rs  uart.rs
(+17 files in other folders)
