[package]
name = "picrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "picrust"
test = false
bench = false

[profile.release]
codegen-units=1
lto=true
panic="abort"
# uncomment to strip symbols
# strip=true

[features]
bcm2712=[]
bcm2711=[]
bcm2837=[]
bcm2836=[]
bcm2835=[]
raspi1=["bcm2835"]
raspi2b=["bcm2836"]
raspi3b=["bcm2837"]
raspi4=["bcm2711"]
default=["raspi3b"]

[dependencies]
