[package]
name = "picrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "picrust"
test = false
bench = false

[profile.release]
codegen-units=1
lto=true
panic="abort"
# uncomment to strip symbols
# strip=true

[features]
mmu=[]
serial_uart=[]
bcm2712=[]
bcm2711=[]
bcm2837=[]
arm_feat_lpa=[]
arm_feat_lpa2=[]
arm_feat_etmv4=[]
cortex_a72=["arm_feat_etmv4"]
raspi3b=["bcm2837", "mmu", "serial_uart", "cortex_a72"]
raspi4=["bcm2711", "serial_uart", "cortex_a72"]
default=["raspi3b"]

[dependencies]
mystd = { path = "../mystd" }
monitor = { path = "../monitor" }