[package]
name = "picrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "picrust"
test = false
bench = false


[profile.dev]
codegen-units=1
lto=true
panic="abort"
opt-level=3


[profile.release]
codegen-units=1
lto=true
panic="abort"
# opt-level=3 # (3 is default)
strip=true

[features]
qemu=[]
mmu=[]
serial_uart=[]
framebuffer=[]
status_led=[]
bcm2712=[]
bcm2711=[]
bcm2837=[]
arm_feat_lpa=[]
arm_feat_lpa2=[]
arm_feat_etmv4=[]
arm_feat_pmu=[]
cortex_a53=["arm_feat_etmv4", "arm_feat_pmu"]
cortex_a72=["arm_feat_etmv4", "arm_feat_pmu"]
raspi3b=[
    "bcm2837", 
    "mmu", 
    "status_led",
    "qemu",
    "serial_uart", 
    "framebuffer", 
    "cortex_a53"]
raspi4=[
    "bcm2711", 
    "status_led",
   # "mmu", 
    "serial_uart", 
   # "framebuffer", 
    "cortex_a72"] 
default=["raspi3b"]

[dependencies]
mystd = { path = "../mystd" }
monitor = { path = "../monitor" }